[project]
name = "nmusers-archive"
version = "0.1.0"
description = "Structured archive of the NMusers (NONMEM) mailing list, 1995–present"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "polars>=1.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
site = [
    "jinja2>=3.1",
    "python-slugify>=8.0",
]
